--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ passlib = "^1.7"
 flask-buzz = "^0.1.7"
 flask-mail = "^0.9.1"
 flask = "^1.0"
-shortuuid
+shortuuid = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 flask-cors = "^3.0"
